Added new exercises contain add, remove and toggle class.

--- a/DOM _addEvenListener/css/style.css
+++ b/DOM _addEvenListener/css/style.css
@@ -12,4 +12,27 @@ body h1 {
 body li {
   font-size: 20px;
 }
+
+body p {
+  font-size: 40px;
+  color: red;
+}
+
+button {
+  border: 5px solid black;
+  font-size: 40px;
+  margin: 30px;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+button:hover {
+  background-color: #161515e1;
+  color: white;
+}
+
+.new-color {
+  background-color: #fff;
+  color: #d86c08;
+}
 /*# sourceMappingURL=style.css.map */
