--- a/DOM _addEvenListener/sass/style.sass
+++ b/DOM _addEvenListener/sass/style.sass
@@ -7,3 +7,18 @@ body
         font-size: 30px
     li
         font-size: 20px
+    p 
+        font-size: 40px
+        color: red
+button
+    border: 5px solid black
+    font-size: 40px
+    margin: 30px
+    cursor: pointer
+    padding: 10px 20px
+button:hover
+    background-color: #161515e1
+    color: white
+.new-color
+    background-color: #fff
+    color: #d86c08
