Added toggle button to add even listener.

--- a/DOM _zadania/sass/style.sass
+++ b/DOM _zadania/sass/style.sass
@@ -22,6 +22,8 @@ button:hover
 .new-color
     background-color: #fff
     color: #d86c08
+.text
+    display: none
 .show
     display: block
 .hide
